--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@supabase/supabase-js": "^1.28.5",
     "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.0",
