--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@supabase/supabase-js": "^1.28.5",
-    "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.0",
     "nanoid": "^3.1.30",
     "next": "12.0.7",
@@ -21,6 +20,8 @@
     "tailwindcss": "^3.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
