--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^1.0.5",
     "@supabase/supabase-js": "^1.28.5",
     "autoprefixer": "^10.4.0",
+    "axios": "^0.24.0",
+    "cookie": "^0.4.1",
     "nanoid": "^3.1.30",
     "next": "12.0.7",
     "postcss": "^8.4.4",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@types/cookie": "^0.4.1",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
