--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
     "cookie": "^0.4.1",
+    "framer-motion": "^5.5.5",
     "nanoid": "^3.1.30",
     "next": "12.0.7",
     "postcss": "^8.4.4",
