--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
     "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "framer-motion": "^5.5.5",
     "nanoid": "^3.1.30",
     "next": "12.0.7",
@@ -26,6 +27,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "@types/cookie": "^0.4.1",
+    "@types/cors": "^2.8.12",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
