--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "@types/cookie": "^0.4.1",
     "@types/cors": "^2.8.12",
-    "@types/node": "16.11.12",
+    "@types/node": "^17.0.14",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
