add sentry error tracking

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@sentry/nextjs": "^6.17.6",
     "@supabase/supabase-js": "^1.28.5",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
