--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "stripe": "^8.205.0",
     "tailwindcss": "^3.0.1"
   },
   "devDependencies": {
