--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.4.0",
     "typescript": "4.5.3"
   }
 }
