--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.5",
     "@logdna/logger": "^2.6.1",
     "@sentry/nextjs": "^6.17.6",
+    "@stripe/stripe-js": "^1.24.0",
     "@supabase/supabase-js": "^1.30.6",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
