--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
     "framer-motion": "^5.5.5",
+    "micro": "^9.3.4",
     "nanoid": "^3.1.31",
     "next": "12.1.0",
     "postcss": "^8.4.4",
@@ -32,6 +33,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "@types/cookie": "^0.4.1",
     "@types/cors": "^2.8.12",
+    "@types/micro": "^7.3.7",
     "@types/node": "^17.0.14",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
