--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
@@ -39,6 +40,8 @@
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.4.0",
-    "typescript": "4.5.3"
+    "typescript": "4.5.3",
+    "vite": "^2.9.1",
+    "vitest": "^0.9.2"
   }
 }
