--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "stripe": "^8.205.0",
-    "tailwindcss": "^3.0.1"
+    "tailwindcss": "^3.0.1",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
