--- a/package.json
+++ b/package.json
@@ -5,35 +5,44 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.2",
+    "@headlessui/react": "1.6",
     "@heroicons/react": "^1.0.5",
     "@logdna/logger": "^2.6.1",
     "@sentry/nextjs": "^6.17.6",
+    "@stripe/stripe-js": "^1.24.0",
     "@supabase/supabase-js": "^1.30.6",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
     "framer-motion": "^5.5.5",
+    "micro": "^9.3.4",
     "nanoid": "^3.1.31",
     "next": "12.1.0",
     "postcss": "^8.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^3.0.1"
+    "stripe": "^8.205.0",
+    "tailwindcss": "^3.0.1",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "@types/cookie": "^0.4.1",
     "@types/cors": "^2.8.12",
+    "@types/micro": "^7.3.7",
     "@types/node": "^17.0.14",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
-    "typescript": "4.5.3"
+    "eslint-config-prettier": "^8.4.0",
+    "typescript": "4.5.3",
+    "vite": "^2.9.1",
+    "vitest": "^0.9.2"
   }
 }
