--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ttm-service",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
